--- a/#Source/style.scss
+++ b/#Source/style.scss
@@ -46,6 +46,10 @@ body {
 			transform: scale(1.001);
 			will-change: transform;
 			transition: .3s;
+			&:hover{
+				transform: scale(1.03);
+				filter: drop-shadow(0px 0px 2px rgb(123, 60, 136));
+			}
 		}
 		&-item img{
 			width: 100%;
