--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ a {
 .presents .box .title h1 {
   font-family: "Poppins";
   color: #EFC87E;
-  font-size: 62px;
+  font-size: calc(var(--index) * 3.1);
   -webkit-animation: mainFadeIn 2s forwards;
   animation: mainFadeIn 2s forwards;
   -webkit-animation-delay: 1.6s;
@@ -158,7 +158,7 @@ a {
   margin-top: -10px;
   position: absolute;
   bottom: 13px;
-  right: -12px;
+  right: -20px;
 }
 .presents .box .role {
   width: 100%;
@@ -194,7 +194,7 @@ a {
   font-weight: 400;
   font-family: "Lato";
   color: #EFC87E;
-  font-size: 22px;
+  font-size: calc(var(--index) * 1.8);
   text-transform: uppercase;
   letter-spacing: 5px;
 }
@@ -935,6 +935,12 @@ body {
   will-change: transform;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+}
+.content__gallery-item:hover {
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
+  -webkit-filter: drop-shadow(0px 0px 2px rgb(123, 60, 136));
+          filter: drop-shadow(0px 0px 2px rgb(123, 60, 136));
 }
 .content__gallery-item img {
   width: 100%;
